--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-dropdown-select": "^4.7.4",
     "react-icons": "^4.2.0",
     "react-typed": "^1.2.0",
     "sass": "^1.32.8"
